--- a/index.html
+++ b/index.html
@@ -193,16 +193,46 @@
         </div>
 
         <div class="ajuda-contato" id="ajuda">
-          <div class="ajuda-texto">
-            <h2>Ajuda & Contato</h2>
-            <ul>
-              <li><i class="fa-solid fa-phone"></i> +55 (11) 93036-4625</li>
-              <li><i class="fa-brands fa-tiktok"></i> @auraeduca</li>
-              <li><i class="fa-brands fa-x-twitter"></i> @auraeduca</li>
-              <li><i class="fa-brands fa-instagram"></i> @auraeduca</li>
-              <li><i class="fa-brands fa-facebook"></i> @auraeduca</li>
-            </ul>
-          </div>
+  <div class="ajuda-texto">
+    <h2>Ajuda & Contato</h2>
+    <ul>
+      <!-- WhatsApp (recomendado para número de celular no Brasil) -->
+      <li>
+        <a href="https://wa.me/5511930364625" target="_blank" rel="noopener noreferrer">
+          <i class="fa-solid fa-phone"></i> +55 (11) 93036-4625
+        </a>
+      </li>
+
+      <!-- TikTok -->
+      <li>
+        <a href="https://www.tiktok.com/@auraeduca" target="_blank" rel="noopener noreferrer">
+          <i class="fa-brands fa-tiktok"></i> @auraeduca
+        </a>
+      </li>
+
+      <!-- Twitter / X -->
+      <li>
+        <a href="https://x.com/auraeducacao" target="_blank" rel="noopener noreferrer">
+          <i class="fa-brands fa-x-twitter"></i> @auraeduca
+        </a>
+      </li>
+
+      <!-- Instagram -->
+      <li>
+        <a href="https://www.instagram.com/auraaprendizagem/" target="_blank" rel="noopener noreferrer">
+          <i class="fa-brands fa-instagram"></i> @auraeduca
+        </a>
+      </li>
+
+      <!-- Facebook -->
+      <li>
+        <a href="https://www.facebook.com/profile.php?id=61583683352640" target="_blank" rel="noopener noreferrer">
+          <i class="fa-brands fa-facebook"></i> @auraeduca
+        </a>
+      </li>
+    </ul>
+  </div>
+</div>
 
           <div class="ajuda-img">
             <img src="./img/friends.png" alt="Personagens AURA felizes" />
