--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AURA</title>
+
+    <link rel="icon" href="./img/logo.png" type="image/png">
+
     <link rel="stylesheet" href="./frontend/css/home.css" />
     <link
       rel="stylesheet"
